# prir_project

./: .gitignore  CMakeLists.txt  Serializer.cpp  Serializer.h  benchmark_manager.py  cuda_analyzer.cu  log_analyzer_hybrid  log_analyzer_hybrid.cpp  log_analyzer_mpi.cpp  log_analyzer_openmp  log_analyzer_openmp.cpp  log_analyzer_seq  log_analyzer_seq.cpp  new_benchmark.py
benchmark_scripts/: benchmark_manager.py  new_benchmark.py
